Lenteur admin, design impression et filtres Il reste à revoir les erreurs sur leslistes déroulantes des filtres. les lenteurs de l'admin sont réglés avec l'augmentation du max size de apache. Le design des factures à imprimer est OK avec l'ajout d'une en-tête de l'atelier de couture.

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,5 +1,5 @@
 {# empty Twig template #}
-<footer>
+<footer class="classe-masquee">
     <div class="bar">
         <div class="bar-wrap">
             <ul class="links">
