--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/edit.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/edit.html.twig
@@ -24,6 +24,7 @@
 </div>
 
 <div class='row'>
+    <div class="span12 bouton_action">
     <div class="float-left">
         <a class="btn" href="{{ path('tailleur') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
@@ -36,5 +37,6 @@
             <button class="btn btn-danger" type="submit" onclick="return confirm('{{ 'views.recordactions.confirm'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}');">{{ 'views.recordactions.delete'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
         </form>
     </div>
+        </div>
 </div>
 {% endblock %}
