--- a/src/Couture/ClientBundle/Resources/views/Client/index.html.twig
+++ b/src/Couture/ClientBundle/Resources/views/Client/index.html.twig
@@ -10,7 +10,7 @@
         <div class="span12 alert alert-success"><h1 class="titre">Nos Clients </h1></div>
     </div>
 
-<div class="row">
+<div class="row  float-right">
     
     
     <div class="span2">
@@ -30,18 +30,18 @@
         </div>
     </div>
 
-    <div class="span12">
+    <div class="span5">
         <div id="filters" class="collapse">
-
+            {% form_theme filterForm with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
             <form class="well" action="{{ path('client') }}" method="get" {{ form_enctype(filterForm) }}>
-                {{ form_row(filterForm.id) }}
+                {#{ form_row(filterForm.id) }#}
                 {{ form_row(filterForm.nom) }}
                 {{ form_row(filterForm.prenom) }}
-                {{ form_row(filterForm.telephone) }}
+                {#{ form_row(filterForm.telephone) }}
                 {{ form_row(filterForm.email) }}
                 {{ form_row(filterForm.adresse) }}
                 {{ form_row(filterForm.datec) }}
-                {{ form_row(filterForm.iduser) }}
+                {{ form_row(filterForm.iduser) }#}
                 {{ form_rest(filterForm) }}
 
                 <p>
@@ -51,6 +51,7 @@
             </form>
         </div>
     </div>
+                </div>
 
     <div class="span12">
     
@@ -105,7 +106,7 @@
     {{ pagerHtml|raw }}
     </div>
 
-        <div class="span8">
+        <div class="span7">
     <a class="btn btn-primary likepaginator" href="{{ path('client_new') }}">
             {{ 'views.index.createnew'|trans({}, 'JordiLlonchCrudGeneratorBundle') }} Client
         </a>
