--- a/src/Couture/CoutureBundle/Resources/views/Couture/index.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Couture/index.html.twig
@@ -6,13 +6,16 @@
 {% endblock %}
 
 {% block page %}
+    <div class="row">
+            <div class="span12 alert alert-success"><h1 class="titre">Liste des Coutures</h1></div>
+    </div>
     {#{ knp_menu_render('CoutureClientBundle:Builder:mainMenu') }#}
 
 <div class="row">
 
-    <div class="span8">
+    <!--div class="span8">
         <h1>{{ 'views.index.list'|trans({'%entity%': 'Couture'}, 'JordiLlonchCrudGeneratorBundle') }}</h1>
-    </div>
+    </div-->
     <div class="span2">
         {% if form_errors(filterForm) %}
         <div class="alert alert-block alert-error fade in form-errors">
@@ -30,18 +33,18 @@
         </div>
     </div>
 
-    <div class="span12">
+    <div class="span5">
         <div id="filters" class="collapse">
-
+            {% form_theme filterForm with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
             <form class="well" action="{{ path('couture') }}" method="get" {{ form_enctype(filterForm) }}>
-                {{ form_row(filterForm.id) }}
+                {#{ form_row(filterForm.id) }}
                 {{ form_row(filterForm.datec) }}
                 {{ form_row(filterForm.datemod) }}
-                {{ form_row(filterForm.datefin) }}
-                {{ form_row(filterForm.prix) }}
+                {{ form_row(filterForm.datefin) }#}
+                {#{ form_row(filterForm.prix) }#}
                 {{ form_row(filterForm.tissu) }}
-                {{ form_row(filterForm.detail) }}
-                {{ form_row(filterForm.iduser) }}
+                {#{ form_row(filterForm.detail) }}
+                {{ form_row(filterForm.iduser) }#}
                 {{ form_row(filterForm.etat) }}
                 {{ form_rest(filterForm) }}
 
@@ -52,24 +55,27 @@
             </form>
         </div>
     </div>
+                </div>
 
-    <div class="span12">
+    
         <div class="row">
+            <div class="span12">
         <div class="panel panel-success">
-                    <div class="panel-heading"><h3 class="panel-title">La liste des Clients<span class="badge">{{ entities|length }}</span></h3></div>
+                    <div class="panel-heading"><h3 class="panel-title">La liste des Coutures<span class="badge">{{ entities|length }}</span></h3></div>
                     <div class="panel-body">
 
-    <table class="table table-striped table-bordered table-condensed">
+    <table class="table table-striped table-condensed">
     <thead>
         <tr>
-            <th>Id</th>
+            <!--th>Id</th>
             <th>Datec</th>
-            <th>Datemod</th>
+            <th>Datemod</th-->
+            <th>Modèles</th>
             <th>Datefin</th>
             <th>Prix</th>
             <th>Tissu</th>
-            <th>Detail</th>
-            <th>Iduser</th>
+            <!--th>Detail</th>
+            <th>Iduser</th-->
             <th>Etat</th>
             <th>{{ 'views.index.actions'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</th>
         </tr>
@@ -77,15 +83,17 @@
     <tbody>
     {% for entity in entities %}
         <tr>
-            <td><a href="{{ path('couture_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+            <!--td><a href="{{ path('couture_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{% if entity.datec %}{{ entity.datec|date('Y-m-d H:i:s') }}{% endif %}</td>
-            <td>{% if entity.datemod %}{{ entity.datemod|date('Y-m-d H:i:s') }}{% endif %}</td>
-            <td>{% if entity.datefin %}{{ entity.datefin|date('Y-m-d H:i:s') }}{% endif %}</td>
+            <td>{% if entity.datemod %}{{ entity.datemod|date('Y-m-d H:i:s') }}{% endif %}</td-->
+            <td>{{ entity.modele.libelle }}</td>
+            <td>{% if entity.datefin %}{{ entity.datefin|date('d M Y') }}{% endif %}</td>
+            
             <td>{{ entity.prix }}</td>
             <td>{{ entity.tissu }}</td>
-            <td>{{ entity.detail }}</td>
-            <td>{{ entity.iduser }}</td>
-            <td>{{ entity.etat }}</td>
+            <!--td>{{ entity.detail }}</td>
+            <td>{{ entity.iduser }}</td-->
+            <td>{% if entity.etat == 0 %}{{ entity.etat }} {{ entity.etat }}{% endif %}</td>
             <td>
         <a class="btn btn-mini" href="{{ path('couture_show', { 'id': entity.id }) }}">
             {{ 'views.actions.show'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
@@ -106,7 +114,7 @@
     {{ pagerHtml|raw }}
     </div>
 
-        <div class="span8">
+        <div class="span7">
     <a class="btn btn-primary likepaginator" href="{{ path('couture_new') }}">
             {{ 'views.index.createnew'|trans({}, 'JordiLlonchCrudGeneratorBundle') }} Couture
         </a>
