--- a/src/Couture/CoutureBundle/Resources/views/Etatintervention/index.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Etatintervention/index.html.twig
@@ -28,13 +28,13 @@
         </div>
     </div>
 
-    <div class="span12">
+    <div class="span5">
         <div id="filters" class="collapse">
-
+            {% form_theme filterForm with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
             <form class="well" action="{{ path('etatIntervention') }}" method="get" {{ form_enctype(filterForm) }}>
-                {{ form_row(filterForm.id) }}
+                {#{ form_row(filterForm.id) }#}
                 {{ form_row(filterForm.libelle) }}
-                {{ form_row(filterForm.description) }}
+                {#{ form_row(filterForm.description) }#}
                 {{ form_rest(filterForm) }}
 
                 <p>
