--- a/src/Couture/CoutureBundle/Resources/views/Modele/index.html.twig
+++ b/src/Couture/CoutureBundle/Resources/views/Modele/index.html.twig
@@ -32,16 +32,17 @@
         </div>
     </div>
 
-    <div class="span12">
+    <div class="span5">
         <div id="filters" class="collapse">
-
+            {% form_theme filterForm with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
             <form class="well" action="{{ path('modele') }}" method="get" {{ form_enctype(filterForm) }}>
-                {{ form_row(filterForm.id) }}
+                {#{ form_row(filterForm.id) }#}
                 {{ form_row(filterForm.libelle) }}
-                {{ form_row(filterForm.description) }}
+                {#{ form_row(filterForm.description) }}
                 {{ form_row(filterForm.datec) }}
                 {{ form_row(filterForm.iduser) }}
-                {{ form_row(filterForm.datemod) }}
+                {{ form_row(filterForm.datemod) }#}
+                
                 {{ form_rest(filterForm) }}
 
                 <p>
@@ -51,9 +52,11 @@
             </form>
         </div>
     </div>
+                </div>
 
-    <div class="span12">
+    
         <div class="row">
+            <div class="span12">
         <div class="panel panel-success">
                     <div class="panel-heading"><h3 class="panel-title">La liste des Modèles<span class="badge">{{ entities|length }}</span></h3></div>
                     <div class="panel-body">
@@ -100,7 +103,7 @@
     {{ pagerHtml|raw }}
     </div>
 
-        <div class="span8">
+        <div class="span7">
     <a class="btn btn-primary likepaginator" href="{{ path('modele_new') }}">
             {{ 'views.index.createnew'|trans({}, 'JordiLlonchCrudGeneratorBundle') }} Modele
         </a>
