Licence & A propos OK Les deux pages sont OK

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -3,11 +3,11 @@
     <div class="bar">
         <div class="bar-wrap">
             <ul class="links">
-                <li><a href="{{ path('dashboard') }}">Accueil</a></li>
+                <li><a href="{{ path('vitrineIndex') }}">Accueil</a></li>
                 <li><a href="{{ path('client') }}">Client</a></li>
                 <li><a href="#">Admin</a></li>
-                <li><a href="{#{ path('a_propos') }#}">A propos</a></li>
-                <li><a href="{#{ path('licence') }#}">Licence</a></li>
+                <li><a href="{{ path('a_propos') }}">A propos</a></li>
+                <li><a href="{{ path('licence') }}">Licence</a></li>
             </ul>
 
             <div class="social">
