--- a/src/Couture/VitrineBundle/Resources/views/Vitrine/apropos.html.twig
+++ b/src/Couture/VitrineBundle/Resources/views/Vitrine/apropos.html.twig
@@ -1,7 +1,50 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}CoutureVitrineBundle:Vintrine:apropos{% endblock %}
+{% block title %}A propos{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Vintrine:apropos page</h1>
+{% block page %}
+
+<h1>L'application Gest'Couture</h1>
+
+<p>L'application Gest'Couture est faite pour les PME qui veulent informatiser leur structure, et qui sont dans le domaine de la haute Couture. Cette application contient les modules de :</p>
+<ul>
+    <li>
+    Un tableau de bord : qui montre les statistiques, les performances de votre PME. L'évolution du nombre de coutures fait par votre entreprise dans la journée, la semaine, l'année, ...
+    </li>
+    <li>
+    Gestion des Clients :
+    </li>
+    <li>
+      
+    Gestion des Modèles :
+    </li>
+    <li>
+    Gestion des 'Coutures':
+    </li>
+    <li>
+    La facturation
+    </li>
+    <li>
+    La gestion des Employés:
+    </li>
+    <li>
+    ...
+</li>
+    </ul>
+<p>For details contact mseye@touba-bss.com</p>
+
+<p>C'est un produit de la structure Touba Business Services & Solutions :</p>
+
+    <ul>
+        <li>Basée à Dakar - HLM 2 N° 646</li>
+
+    <li>K SARR : DG - 77352 88 82</li>
+
+    <li>M. SEYE : Chef de Projet Développeur - 77716 73 00</li>
+
+    <li>www.touba-bss.com</li>
+
+    <li>tbss@touba-bss.com</li>
+    </ul>
+
 {% endblock %}
