--- a/src/Couture/VitrineBundle/Resources/views/Vitrine/licence.html.twig
+++ b/src/Couture/VitrineBundle/Resources/views/Vitrine/licence.html.twig
@@ -1,7 +1,91 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}CoutureVitrineBundle:Vintrine:licence{% endblock %}
+{% block title %}Licence{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Vintrine:licence page</h1>
+{% block page %}
+<h1>Licence</h1>
+
+<h3>Article 1 - Objet des présentes conditions générales</h3>
+<p>Les présentes conditions générales ont pour objet de préciser les conditions dans lesquelles La société Touba Business Services & Solutions concède à l’UTILISATEUR un droit d’utilisation du PROGICIEL et assure la maintenance dudit PROGICIEL.</p>
+<h3>Article 2 - Utilisation du PROGICIEL</h3>
+<p>Le PROGICIEL s’adresse à des utilisateurs [confirmés ou non, préciser le type de solutions informatiques etc...]. L’UTILISATEUR a testé le PROGICIEL avant la signature du bon de commande.</p>
+<h3>Article 3 - Droit d’utilisation</h3>
+<p>La société Touba Business Services & Solutions concède à l’UTILISATEUR un droit personnel et non exclusif d’utilisation du PROGICIEL pour ses propres besoins. Pour l’exécution des présentes conditions générales, La société Touba Business Services & Solutions accorde à l’UTILISATEUR le droit de reproduire et d’utiliser ledit PROGICIEL et sa documentation dans la limite du nombre de postes prévus dans le bon de commande. Un poste correspond à un écran et un clavier. L’UTILISATEUR se porte for du respect des présentes conditions générales par ses personnels et sous-traitants. Le droit d’utilisation est conféré pour la durée des droits de propriété intellectuelle sur le PROGICIEL.</p>
+<h3>Article 4 - Prix et modalités de paiement</h3>
+<p>En contrepartie de la licence d’utilisation du PROGICIEL, l’UTILISATEUR s’engage à régler le prix indiqué dans le bon de commande. Le règlement se fera par chèque ou virement bancaire à réception de la commande. L’UTILISATEUR ne dispose que d’un droit d’utilisation du PROGICIEL et ne sera pas propriétaire de son support jusqu’à complet paiement de la redevance d’utilisation.</p>
+<h3>Article 5 - Garantie et Maintenance</h3>
+    <p>La période de garantie s’étend sur X mois à compter du jour de la réception. </p>
+<p>Pendant cette période, le Concédant garantit le Licencié contre toute survenance d’anomalies, incidents, erreurs ou défaut de fonctionnement par rapport aux spécifications. Un registre des anomalies et un registre des interventions du Concédant seront tenus à cet effet. Le Concédant s’engage à ce titre à remédier sans frais à l’incident détecté, identifié et reproductible par le Licencié. Cependant, les frais de séjour et de déplacement du personnel qui s’avéreraient nécessaires pour remédier à l’incident seront remboursés au Concédant par le Licencié sur présentation des justificatifs. Si la demande d’intervention est motivée par un incident non imputable au progiciel dans sa version remise par le Concédant, celui-ci facturera, en sus des frais de séjour et déplacement, le temps passé au prix en vigueur chez le Concédant à la date de l’intervention.</p>
+<p>A l’issue de la période de garantie, un contrat de maintenance pourra être conclu entre les parties pour une période de un an. Cette maintenance sera renouvelée annuellement par tacite reconduction, sauf dénonciation par l’une des parties un mois au moins avant l’échéance annuelle. L’abonnement à la maintenance donne lieu au versement d’une redevance annuelle au tarif en vigueur lors de la signature du contrat de maintenance ou du renouvellement dudit contrat. </p>
+<p>Tout service ou assistance non prévu dans le cadre de la maintenance ou du présent contrat devra faire l’objet d’un avenant.</p>
+<h3>Article 6 - Résiliation</h3>
+<h4>6.1 Par La société Touba Business Services & Solutions</h4>
+<p>La société Touba Business Services & Solutions se réserve la possibilité de résilier unilatéralement et de plein droit la licence d’utilisation et les prestations de maintenance, et ce, sans préjudice de tous dommages et intérêts dans les cas suivants : </p>
+redressement judiciaire ou liquidation de l’UTILISATEUR, sous réserve des conditions prévues par la loi du 25 janvier 1985,</h4>
+non-paiement par l’UTILISATEUR de la redevance d’utilisation de la licence d’utilisation ou de la redevance de maintenance à chaque échéance contractuelle, pour le compte de l’UTILISATEUR, après une mise en demeure adressée à l’UTILISATEUR par lettre recommandée avec avis de réception et restée sans effet dans un délai de 15 jours,</p>
+atteinte aux droits d’auteur. En cas de résiliation, l’UTILISATEUR s’engage à procéder, sur chaque poste, à la désinstallation du PROGICIEL.</p>
+<h4>6.2 Par l’UTILISATEUR</h4>
+<p>L’UTILISATEUR peut résilier les prestations de maintenance à leur échéance annuelle, avec un préavis de 2 mois, par simple notification par lettre recommandée avec avis de réception adressé au FOURNISSEUR.</p>
+<h3>Article 7 - Sous-licence</h3>
+<p>L’UTILISATEUR ne pourra utiliser le PROGICIEL que pour ses propres besoins. Il s’interdit à ce titre d’octroyer des sous-licences. L’UTILISATEUR ne pourra concéder, même gratuitement, le droit d’utilisation à des tiers.</p>
+<h3>Article 8 - Propriété</h3>
+<p>Le PROGICIEL et sa documentation dont il est fait mention à l’article 3, ainsi que toute copie, restent la propriété exclusive du FOURNISSEUR, qui se réserve la qualité d’auteur conformément aux dispositions du code de la propriété intellectuelle. Le PROGICIEL ne peut être cédé, apporté ou transféré sans l’accord du FOURNISSEUR. La société Touba Business Services & Solutions garantit l’UTILISATEUR de toute procédure en contrefaçon qui serait engagée contre lui, à condition toutefois qu’il en soit avisé par écrit et dans les meilleurs délais par l’UTILISATEUR et que le PROGICIEL n’ait pas été modifié par l’UTILISATEUR. La licence accordée par La société Touba Business Services & Solutions donne à l’UTILISATEUR le droit d’utilisation du PROGICIEL appartenant au FOURNISSEUR, sur le matériel désigné dans le bon de commande, ce qui implique que :</p>
+<ul>
+    <li>L’UTILISATEUR s’engage à n’utiliser ce PROGICIEL que pour ses propres besoins. Il s’interdit de fournir le PROGICIEL sous quelque forme que ce soit ou de le mettre à disposition de quiconque à l’exception de ses employés,</li>
+<li>L’UTILISATEUR s’engage à ne pas développer ou commercialiser le PROGICIEL objet du présent bon de commande ou des produits susceptibles de le concurrencer,</li>
+<li>La société Touba Business Services & Solutions concède à l’UTILISATEUR, à titre personnel, non cessible et non exclusif le droit d’utiliser le PROGICIEL, dans la limite du nombre de postes indiqués dans le bon de commande.</li>
+ <li>L’UTILISATEUR ne pourra pas modifier le PROGICIEL, ni l’adapter sauf autorisation expresse écrite préalable du FOURNISSEUR.</li>
+ <li>L’UTILISATEUR ne pourra corriger les erreurs affectant le PROGICIEL, les parties convenant expressément de réserver cette correction au FOURNISSEUR.</li>
+</ul>
+<h3>Article 9 - Incessibilité</h3>
+<p>Il est expressément convenu que les droits concédés par La société Touba Business Services & Solutions ne peuvent être cédés à un tiers par l’UTILISATEUR. Les droits d’utilisation ne sont pas cessibles, même en cas de cession du fonds, de location-gérance, de fusion ou de toute autre opération au terme de laquelle les droits de l’UTILISATEUR seraient transférés à un tiers.</p>
+<h3>Article 10 - Matériel</h3>
+<p>Le droit d’utilisation du Progiciel est concédé pour le matériel désigné par le Licencié, dont la description figure en annexe X, à l’adresse du site du Licencié. </p>
+<p>Le Licencié est responsable du bon fonctionnement du matériel et de la conformité de son environnement aux spécifications du constructeur. L’utilisation du Progiciel sur tout autre matériel, même exploité par le licencié, est interdite. Toute modification du matériel désigné ou installation supplémentaire au matériel désigné devront faire l’objet d’un avenant entre le Licencié et le Concédant. </p>
+<p>Le droit d’utilisation peut être transféré exceptionnellement et provisoirement sur un matériel de secours d’un des sites du Licencié, si le site ou le matériel du Licencié est temporairement indisponible ou inutilisable. Le cas échéant, le Licencié a l’obligation d’en avertir le Concédant par lettre recommandée avec accusé de réception. En dehors de ce cas, tout transfert du Progiciel sur un site n’appartenant pas au Licencié ou sur un matériel autre que celui désigné en annexe 3 doit faire l’objet de l’accord écrit préalable du Concédant, qui se réserve le droit de refuser le transfert. Dans le cas où le transfert est susceptible de nécessiter une intervention du Concédant, à la charge du Licencié, au titre de l’assistance ou de la maintenance, le Licencié devra en aviser le Concédant par lettre recommandée avec accusé de réception avec un préavis de trois mois. Le Licencié s’engage à détruire, sans délai, le Progiciel et ses copies sur le matériel de secours, en cas d’indisponibilité temporaire, ou sur l’ancien matériel en cas de transfert définitif. A défaut, le Concédant se réserve le droit de facturer le droit de mise à disposition supplémentaire.</p>
+<h3>Article 11 - Remise et installation du PROGICIEL</h3>
+<p>La société Touba Business Services & Solutions remettra à l’UTILISATEUR le PROGICIEL composé des programmes délivrés en langage directement assimilable par l’ordinateur prévu dans la configuration, et sa documentation. Il appartient au responsable du projet désigné par l’UTILISATEUR d’installer le PROGICIEL et de s’assurer du bon fonctionnement de celui-ci avant de procéder à sa diffusion sur les autres matériels de l’UTILISATEUR. La société Touba Business Services & Solutions ne pourra être tenu pour responsable des retards causés par l’indisponibilité du matériel désigné ou du personnel devant être fourni par l’UTILISATEUR. </p>
+<p>Si des travaux complémentaires sont demandés par l’UTILISATEUR, ils devront faire l’objet d’une convention séparée.</p>
+ <p>L’installation sera réputée réalisée dès l’installation physique du PROGICIEL sur le matériel.</p>
+<h3>Article 12 - Copie de sauvegarde</h3>
+<p>L’UTILISATEUR ne pourra faire que les copies de sauvegarde s’avérant nécessaires pour son exploitation, à titre de sécurité. Ces copies resteront la propriété du FOURNISSEUR et devront faire l’objet d’un inventaire accessible à ce dernier.</p>
+<h3>Article 13 - Divulgation</h3>
+<p>Le PROGICIEL fait partie des secrets de fabrication et du savoir-faire du FOURNISSEUR et devra être considéré par L’UTILISATEUR comme une information confidentielle, qu’il puisse ou non être protégé par un droit de propriété intellectuelle, brevet, droit d’auteur, ou d’une autre façon. </p>
+<p>A ce titre, l’UTILISATEUR s’interdit de communiquer le PROGICIEL dans ses versions sources ou exécutables ainsi que les programmes et autres éléments (documentation, etc.) constituant tout ou partie du progiciel. L’UTILISATEUR s’engage également à prendre toutes les mesures nécessaires pour que le PROGICIEL et sa documentation ne soient pas mis à la disposition de tiers et s’engage à ce que ses collaborateurs ou son personnel respectent ces obligations et les droits d’auteur du FOURNISSEUR. L’UTILISATEUR s’engage à prendre toutes les précautions nécessaires pour éviter la divulgation ou la reproduction ou l’utilisation illicite par ses personnels et prestataires, notamment en faisant signer à ces derniers un engagement personnel de confidentialité. L’UTILISATEUR s’interdit d’utiliser les spécifications du PROGICIEL pour créer ou permettre la création d’un programme ayant la même destination. </p>
+<p>De convention expresse, La société Touba Business Services & Solutions est autorisé à vérifier à tout moment le respect de ces obligations. Dans le cas où l’UTILISATEUR ne respecterait pas les obligations mentionnées au présent article, La société Touba Business Services & Solutions se réserve le droit de réclamer à l’UTILISATEUR une indemnité d’un montant égal à deux fois le montant correspondant au prix de la redevance d’utilisation pris en charge par l’UTILISATEUR pour son compte et révisé selon l’indice Syntec.</p>
+<h3>Article 14 - Modifications</h3>
+<p>L’UTILISATEUR s’engage à n’apporter aucune modification aux éléments remis par La société Touba Business Services & Solutions, sans l’accord préalable et écrit de celui-ci. Le non respect : de cette clause déchoit l’UTILISATEUR du bénéfice de La garantie et de la maintenance sans que l’UTILISATEUR puisse prétendre à une quelconque indemnité de ce fait.</p>
+
+<h3>Article 15 - Responsabilité</h3>
+<p>La société Touba Business Services & Solutions est soumis à une obligation de moyen, à l’exclusion de tout autre. Il garantit la conformité du PROGICIEL aux spécifications décrites dans sa documentation. L’UTILISATEUR assume toutes les responsabilités autres que celle de conformité du PROGICIEL aux spécifications et notamment celles qui concernent :</p>
+<ul>
+    <li>
+        
+    
+	 l’adéquation du PROGICIEL à ses besoins,
+</li>
+<li>
+	 l’exploitation du PROGICIEL,
+</li>
+<li>
+	 la qualification et la compétence de son personnel. 
+</li>
+</ul>
+L’UTILISATEUR est en outre responsable de la protection des données enregistrées et de la réparation des bases de données, des résultats obtenus, de la conformité de l’utilisation du PROGICIEL à la législation et notamment des déclarations auprès de la Commission Nationale pour l’Informatique et les Libertés (CNIL) relatives au traitement informatisé des données nominatives. La société Touba Business Services & Solutions dégage toute responsabilité en cas de non conformité du PROGICIEL à la réglementation en vigueur au cours d’une période donnée si les prestations de maintenance ne sont pas commandées pour cette période. Il appartient à l’UTILISATEUR de développer les procédures d’exploitation et de mettre en place les points de contrôle et mécanismes de sécurité appropriés à la sauvegarde et à la remise en état des données en cas d’anomalies dans le déroulement des programmes.
+ L’UTILISATEUR assume seul les éventuels dysfonctionnements et dommages dus à une modification du PROGICIEL, même minime, effectuée avec ou sans l’autorisation du FOURNISSEUR. L’UTILISATEUR reconnaît expressément avoir reçu du FOURNISSEUR toutes les informations nécessaires lui permettant d’apprécier l’adéquation du PROGICIEL à ses besoins et de prendre toutes les précautions utiles pour sa mise en œuvre et son exploitation. La société Touba Business Services & Solutions ne sera en aucun cas tenu de réparer d’éventuels dommages directs ou indirects, même s’il a été informé de tels dommages. L’UTILISATEUR sera seul responsable de l’utilisation du PROGICIEL.
+<h3>Article 16 - Litiges</h3>
+Le bon de commande et les présentes conditions générales sont soumis à la Loi Française. Tout litige relatif à l’interprétation ou à l’exécution du bon de commande et des présentes conditions générales sera soumis aux tribunaux compétents de Paris.
+<h3>Article 17 - Intégralité - Non validité partielle</h3>
+Le ou les Bons de commande et les présentes conditions générales expriment l’intégralité des obligations des parties. Aucun document ne pourra engendrer d’obligations au titre du présent bon de commande s’il n’est l’objet d’un avenant signé par les parties. Si une ou plusieurs dispositions d’un bon de commande ou des conditions générales sont tenues pour non valides par une loi ou un règlement, ou déclarées telles par décision définitive d’une juridiction compétente, elles seront réputées non écrites, les autres dispositions du présent bon de commande et des présentes conditions générales garderont toute leur force et leur portée.
+<h3>Article 18 - Election de domicile</h3>
+Les parties élisent domicile, sauf dérogation expresse convenue d’un commun accord, aux adresses de leur siège respectif.
+Date de commande :
+
+<div class="row">
+    <div class="col-sm-3">
+        Signature : <!--img src="{{ asset('images/cachet.png') }}" /-->
+    </div>
+</div>
+
+
 {% endblock %}
