Cachet OK et error authentification Les deux pages sont OK

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -36,7 +36,7 @@
                 </a>
             </div>
             <div class="clear"></div>
-            <div class="copyright">Touba Business Services & Solutions | &copy;  2015 All Rights Reserved</div>
+            <div class="copyright"><a class="navbar-brand" href="http://www.touba-bss.com"><img src="{{ asset('images/LOGO.png') }}" alt="Touba Business Services & Solutions" title="Touba Business Services & Solutions"/></a> | &copy;  2015 All Rights Reserved</div>
         </div>
     </div>
 </footer>
