--- a/web/bundles/sonataadmin/css/layout.css
+++ b/web/bundles/sonataadmin/css/layout.css
@@ -1,35 +1,20 @@
-body.sonata-bc {
-    padding-top: 60px;
-}
+/*body{*/
+    /*padding-top: 50px;*/
+/*}*/
 
-@media (max-width: 978px) {
-    body.sonata-bc {
-        padding-top: 0;
-    }
-}
+/*@media (max-width: 978px) {*/
+    /*body{*/
+        /*padding-top: 0;*/
+    /*}*/
+/*}*/
 
-.sonata-bc .navbar a.brand {
-    margin: 0px;
-    padding: 0px;
-    line-height: 40px;
-    padding-right: 20px;
-}
-
-.sonata-bc a.brand img {
-    margin: 0px;
-    padding: 0px;
-    padding-right: 5px;
-    height: 28px;
-    vertical-align: middle;
-}
-
-.sonata-bc div.border {
+div.border {
     border: 1px solid #DDDDDD;
     border-radius: 6px 6px 6px 6px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
 }
 
-.sonata-bc div.connection {
+div.connection {
     position: absolute;
     left: 50%;
     top: 35%;
@@ -40,28 +25,28 @@ body.sonata-bc {
     border-radius: 6px;
 }
 
-.sonata-bc div.connection .control-group {
+div.connection .control-group {
     padding: 0 20px 0 20px;
 }
 
-.sonata-bc div.connection .alert {
+div.connection .alert {
     margin: 0 20px 20px 20px;
 }
 
-.sonata-bc div.connection form {
+div.connection form {
     padding-top: 15px;
     margin-bottom: 0px;
 }
 
-.sonata-bc div.connection form .form-actions {
+div.connection form .form-actions {
     margin-bottom: 0px;
 }
 
-.sonata-bc div.connection .form-actions {
+div.connection .form-actions {
     padding-left: 20px;
 }
 
-.sonata-bc div.connection div input.big {
+div.connection div input.big {
     height: 35px;
     font-size: 25px;
 }
@@ -70,85 +55,31 @@ body.sonata-bc {
     margin-left: 0px;
 }
 
-.sonata-bc div.sonata-ba-field-inline-table input.title {
+
+
+div.sonata-ba-field-inline-table input.title {
     width: 100px;
 }
 
-.sonata-bc div.sonata-ba-field-inline-table textarea.title {
+div.sonata-ba-field-inline-table textarea.title {
     width: 150px;
     height: 50px;
 }
 
-.sonata-bc fieldset.filter_legend {
-    font-weight: bold;
-    border: 1px solid #E4E4E4;
-    margin: 0;
-    border-width: 1px 0 0;
-    padding: 0;
-}
-
-.sonata-bc fieldset.filter_legend table {
+h4.filter_legend table {
     margin: 10px 0;
 }
 
-.sonata-bc legend.filter_legend {
-    position: relative;
-    padding-left: 16px;
-    cursor: pointer;
+
+.table-striped tbody tr.sonata-ba-list-row-selected td, .table-striped tbody tr.sonata-ba-list-row-selected th {
+    background-color: #E3F7FE;
 }
 
-.sonata-bc legend.filter_legend:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    border-top: 4px solid black;
-    border-right: 4px solid transparent;
-    border-left: 4px solid transparent;
-    position: absolute;
-    top: 50%;
-    left: 2px;
-    margin-top: -2px;
-}
-
-.sonata-bc form.sonata-filter-form.form-stacked {
-    padding-left: 0;
-}
-
-.sonata-bc legend.filter_legend.active,
-.sonata-bc tr.filter.active * {
-    font-weight: bold;
-    color: #000;
-}
-
-.sonata-bc table.sonata-ba-list {
-    font-size: 14px;
-}
-
-.sonata-bc td.sonata-ba-list-label {
-    vertical-align: middle;
-    font-weight: bold;
-    text-align: right;
-    color: #565656;
-}
-
-.sonata-bc .zebra-striped tbody tr.sonata-ba-list-row-selected td, .sonata-bc .zebra-striped tbody tr.sonata-ba-list-row-selected th {
-    background-color: #fcffc4;
-}
-
-.sonata-bc .zebra-striped tbody tr.sonata-ba-list-row-selected:nth-child(odd) td, .sonata-bc .zebra-striped tbody tr.sonata-ba-list-row-selected:nth-child(odd) th {
-    background-color: #faff9e;
-}
-
-.sonata-bc .zebra-striped tbody tr.sonata-ba-list-row-selected:hover td, .sonata-bc .zebra-striped tbody tr.sonata-ba-list-row-selected:hover th {
-    background-color: #fdffd8;
-}
-
-.sonata-bc table.sonata-ba-list td img {
+table.sonata-ba-list td img {
     vertical-align: bottom
 }
 
-.sonata-bc td.pager ul {
+td.pager ul {
     float: left;
     list-style: none;
     margin: 2px;
@@ -156,69 +87,69 @@ body.sonata-bc {
     margin-right: auto;
 }
 
-.sonata-bc td.pager ul li {
+td.pager ul li {
     float: left;
 }
 
-.sonata-bc td.pager ul li a {
+td.pager ul li a {
     border: 1px solid #cccccc;
     line-height: 25px;
     padding: 1px 8px 1px 8px;
     margin: 2px;
 }
 
-.sonata-bc div.sonata-actions {
+div.sonata-actions {
     /*margin-top: 18px;*/
     float: right
 }
 
-.sonata-bc .sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier {
+.sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier {
     font-weight: bold;
 }
 
-.sonata-bc .sonata-ba-list tr:hover td.sonata-ba-list-field.sonata-ba-list-field-select a {
+.sonata-ba-list tr:hover td.sonata-ba-list-field.sonata-ba-list-field-select a {
     visibility: visible;
 }
 
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-boolean i {
+td.sonata-ba-list-field.sonata-ba-list-field-boolean i {
     margin-right: 1ex;
 }
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-boolean a:hover {
+td.sonata-ba-list-field.sonata-ba-list-field-boolean a:hover {
     text-decoration: none;
 }
 
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-currency,
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-percent,
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-integer {
+td.sonata-ba-list-field.sonata-ba-list-field-currency,
+td.sonata-ba-list-field.sonata-ba-list-field-percent,
+td.sonata-ba-list-field.sonata-ba-list-field-integer {
     text-align: right;
 }
 
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-select {
+td.sonata-ba-list-field.sonata-ba-list-field-select {
     text-align: center;
 }
-.sonata-bc td.sonata-ba-list-field.sonata-ba-list-field-select a {
+td.sonata-ba-list-field.sonata-ba-list-field-select a {
     visibility: hidden;
 }
 
-.sonata-bc div.sonata-ba-modal-edit-one-to-one td.sonata-ba-list-field-batch,
-.sonata-bc div.sonata-ba-modal-edit-one-to-one div.sonata-ba-list-actions,
-.sonata-bc div.sonata-ba-modal-edit-one-to-one th.sonata-ba-list-field-header-batch {
+div.sonata-ba-modal-edit-one-to-one td.sonata-ba-list-field-batch,
+div.sonata-ba-modal-edit-one-to-one div.sonata-ba-list-actions,
+div.sonata-ba-modal-edit-one-to-one th.sonata-ba-list-field-header-batch {
     display: none;
 }
 
-.sonata-bc div.sonata-ba-modal-edit-one-to-one div.sonata-ba-list-actions {
+div.sonata-ba-modal-edit-one-to-one div.sonata-ba-list-actions {
     display: none;
 }
 
-.sonata-bc th.sonata-ba-list-field-header-order-desc a,
-.sonata-bc th.sonata-ba-list-field-header-order-asc a {
+th.sonata-ba-list-field-header-order-desc a,
+th.sonata-ba-list-field-header-order-asc a {
     position: relative;
     margin-right: 10px;
 }
 
-.sonata-bc th.sonata-ba-list-field-header-order-asc a:hover:before,
-.sonata-bc th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:before,
-.sonata-bc th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:hover:before {
+th.sonata-ba-list-field-header-order-asc a:hover:after,
+th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:after,
+th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:hover:after {
     content: "";
     display: block;
     border-top: 4px solid black;
@@ -231,9 +162,9 @@ body.sonata-bc {
     margin-top: -1px;
 }
 
-.sonata-bc th.sonata-ba-list-field-header-order-desc a:hover:before,
-.sonata-bc th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:before,
-.sonata-bc th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:hover:before {
+th.sonata-ba-list-field-header-order-desc a:hover:after,
+th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:after,
+th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:hover:after {
     content: "";
     display: block;
     border-bottom: 4px solid black;
@@ -246,72 +177,83 @@ body.sonata-bc {
     margin-top: -5px;
 }
 
-.sonata-bc em.sonata-ba-field-help {
+em.sonata-ba-field-help {
     display: block;
     color: #999;
     margin-bottom: 10px;
 }
 
-.sonata-bc fieldset legend {
+fieldset legend {
     padding-left: 0px;
 }
 
-.sonata-bc select.sonata-medium, textarea.sonata-medium, input.sonata-medium {
+select.sonata-medium, textarea.sonata-medium, input.sonata-medium {
     width: 400px;
 }
 
-.sonata-bc textarea.sonata-medium {
+textarea.sonata-medium {
     height: 125px;
 }
 
-.sonata-bc div.sonata-medium-date {
+div.sonata-medium-date {
     overflow: hidden;
 }
 
-.sonata-bc div.sonata-medium-date select {
+div.sonata-medium-date select {
     width: 85px;
 }
 
-.sonata-bc div.sonata-medium-date div {
+div.sonata-medium-date div {
     float: left;
 }
 
-.sonata-bc .sonata-ba-field-inline-table select.sonata-medium,
-.sonata-bc .sonata-ba-field-inline-table textarea.sonata-medium,
-.sonata-bc .sonata-ba-field-inline-table input.sonata-medium {
+.sonata-ba-field-inline-table select.sonata-medium,
+.sonata-ba-field-inline-table textarea.sonata-medium,
+.sonata-ba-field-inline-table input.sonata-medium {
     width: 150px;
 }
 
-.sonata-bc .sonata-ba-view-title {
-    font-size: 19.5px;
+.sonata-ba-view-title {
+    font-size: 19px;
     line-height: 1;
     color: #404040;
     *padding: 0 0 5px 0;
     *line-height: 1.5;
 }
 
-.sonata-bc .sonata-ba-view-title td, .sonata-ba-view-title th {
+.sonata-ba-view-title td, .sonata-ba-view-title th {
     border: 0;
 }
 
-.sonata-bc .sonata-ba-view-container th {
+.sonata-ba-view-container th {
     width: 130px;
 }
 
-.sonata-bc .sonata-ba-view-container td, .sonata-ba-view-container th {
+.sonata-ba-view-container td, .sonata-ba-view-container th {
     border-bottom: 0;
     border-top: 1px solid #eee;
 }
 
-.sonata-bc .sonata-ba-view-container:nth-child(2n) td, .sonata-ba-view-container:nth-child(2n) th {
+.sonata-ba-view-container:nth-child(2n) td, .sonata-ba-view-container:nth-child(2n) th {
     background-color: #f9f9f9;
 }
 
-.sonata-bc .sonata-ba-view-container:nth-child(2n):hover td, .sonata-ba-view-container:nth-child(2n):hover th {
+.sonata-ba-view-container:nth-child(2n):hover td, .sonata-ba-view-container:nth-child(2n):hover th {
     background-color: #f5f5f5;
 }
 
-.sonata-bc .container-fluid > .sidebar {
+.sonata-ba-view-container.history-audit-compare th {
+     width: 10%;
+}
+
+.sonata-ba-view-container.history-audit-compare td {
+     width: 40%;
+}
+.sonata-ba-view-container.history-audit-compare th.diff {
+     background: pink;
+}
+
+.container-fluid > .sidebar {
     top: auto;
 }
 
@@ -325,11 +267,15 @@ body.sonata-bc {
     float: left;
 }
 
+.sonata-collection-add, .sonata-collection-delete {
+    box-shadow: none;
+}
+
 .no-js .sonata-collection-add, .no-js .sonata-collection-delete {
     display: none;
 }
 
-.sonata-bc .form-horizontal .sonata-collection-row-without-label {
+.form-horizontal .sonata-collection-row-without-label {
     margin-left: 0;
 }
 
@@ -367,11 +313,11 @@ legend.sonata-ba-fieldset-collapsed-description + .sonata-ba-collapsed-fields {
     display: none;
 }
 
-.sonata-bc .pagination {
+.pagination {
     margin: 0px;
 }
 
-.sonata-bc .field-short-description {
+.field-short-description {
     min-width: 250px;
     min-height: 18px;
     display: block;
@@ -381,38 +327,27 @@ legend.sonata-ba-fieldset-collapsed-description + .sonata-ba-collapsed-fields {
     border-radius: 4px 4px 4px 4px;
     list-style: none outside none;
     margin: 0 15px 0 0;
-    padding: 5px 15px;
+    padding: 4px 15px;
 }
 
-.sonata-bc .inner-field-short-description {
+.inner-field-short-description {
 
 }
 
-.sonata-bc .required:after {
+.required:after {
     content: '*';
 }
 
-.sonata-bc .form-horizontal .control-group {
+.form-horizontal .control-group {
     margin-bottom: 10px;
 }
 
-span.field-actions {
-    margin-left: 10px;
-}
-
-/* X-editable */
-.sonata-bc td.sonata-ba-list-field .editable {
-    cursor: pointer;
-}
-.sonata-bc td.sonata-ba-list-field .btn.editable {
-    border-bottom: solid 1px #BBB;
-}
-.sonata-bc td.sonata-ba-list-field .editable-empty:not(.editable-open) {
-    display: none;
-}
-.sonata-bc .sonata-ba-list tr:hover .editable-empty {
-    display: inline-block;
-}
-.editable-pre-wrapped {
-    white-space: normal;
+.noscript-warning {
+    background-color: #C70A0A;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 4px 0;
+    text-align: center;
+    width: 100%;
 }
