--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -8,7 +8,8 @@
 
         <div class="container ">
             {% if error %}
-                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
+                    <!--div>{#{ error.messageKey|trans(error.messageData, 'security') }#}</div-->
             {% endif %}
             <div class="col-sm-6 col-md-4 col-md-offset-4 background-formulaire form-connexion">
                 
